🔧 [#72]; fix: body에  scrollbar-gutter: stable; /* 스크롤바 공간 유지 */ 적용

--- a/pick-habju/src/index.css
+++ b/pick-habju/src/index.css
@@ -32,6 +32,7 @@
   body {
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* IE & Edge */
+    scrollbar-gutter: stable; /* 스크롤바 공간 유지 */
   }
 
   body::-webkit-scrollbar {
